--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ a {
 }
 
 .gradient__text {
-  background: var(__gradient-text);
+  background: var(--gradient-text);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
